# FileTransfer-Main

./: .clang-format  .gitignore  CMakeLists.txt  conan_toolchain.cmake  conanfile.txt  setup.sh
.github/workflows/: GCC Build.yaml
Client/: CMakeLists.txt  Client.cpp  Client.hpp  MyFrame.hpp  MyList.hpp  MyListItem.cpp  MyListItem.hpp  MyWindow.hpp
Protoses/: CMakeLists.txt
Server/: Common.hpp  Files.hpp  Main.cpp  Transfer.hpp  User.hpp
include/: FileSystem.hpp  Storage.hpp
